k8s/00-namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: auth
  labels:
    projeto: techchallenge-fase2
---
apiVersion: v1
kind: Namespace
metadata:
  name: flags
  labels:
    projeto: techchallenge-fase2
---
apiVersion: v1
kind: Namespace
metadata:
  name: targeting
  labels:
    projeto: techchallenge-fase2
---
apiVersion: v1
kind: Namespace
metadata:
  name: evaluation
  labels:
    projeto: techchallenge-fase2
---
apiVersion: v1
kind: Namespace
metadata:
  name: analytics
  labels:
    projeto: techchallenge-fase2
